Add flexibility to inline filters and actions
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>